; ModuleID = '/home/carl/AnghaBench/postgres/contrib/intarray/extr__int_tool.c_intarray_concat_arrays.c'
source_filename = "/home/carl/AnghaBench/postgres/contrib/intarray/extr__int_tool.c_intarray_concat_arrays.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @intarray_concat_arrays(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %8 = load i32*, i32** %3, align 8
  %9 = call i32 @ARRNELEMS(i32* %8)
  store i32 %9, i32* %6, align 4
  %10 = load i32*, i32** %4, align 8
  %11 = call i32 @ARRNELEMS(i32* %10)
  store i32 %11, i32* %7, align 4
  %12 = load i32*, i32** %3, align 8
  %13 = call i32 @CHECKARRVALID(i32* %12)
  %14 = load i32*, i32** %4, align 8
  %15 = call i32 @CHECKARRVALID(i32* %14)
  %16 = load i32, i32* %6, align 4
  %17 = load i32, i32* %7, align 4
  %18 = add nsw i32 %16, %17
  %19 = call i32* @new_intArrayType(i32 %18)
  store i32* %19, i32** %5, align 8
  %20 = load i32, i32* %6, align 4
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %22, label %32

22:                                               ; preds = %2
  %23 = load i32*, i32** %5, align 8
  %24 = call i64 @ARRPTR(i32* %23)
  %25 = load i32*, i32** %3, align 8
  %26 = call i64 @ARRPTR(i32* %25)
  %27 = load i32, i32* %6, align 4
  %28 = sext i32 %27 to i64
  %29 = mul i64 %28, 4
  %30 = trunc i64 %29 to i32
  %31 = call i32 @memcpy(i64 %24, i64 %26, i32 %30)
  br label %32

32:                                               ; preds = %22, %2
  %33 = load i32, i32* %7, align 4
  %34 = icmp ne i32 %33, 0
  br i1 %34, label %35, label %48

35:                                               ; preds = %32
  %36 = load i32*, i32** %5, align 8
  %37 = call i64 @ARRPTR(i32* %36)
  %38 = load i32, i32* %6, align 4
  %39 = sext i32 %38 to i64
  %40 = add nsw i64 %37, %39
  %41 = load i32*, i32** %4, align 8
  %42 = call i64 @ARRPTR(i32* %41)
  %43 = load i32, i32* %7, align 4
  %44 = sext i32 %43 to i64
  %45 = mul i64 %44, 4
  %46 = trunc i64 %45 to i32
  %47 = call i32 @memcpy(i64 %40, i64 %42, i32 %46)
  br label %48

48:                                               ; preds = %35, %32
  %49 = load i32*, i32** %5, align 8
  ret i32* %49
}

declare dso_local i32 @ARRNELEMS(i32*) #1

declare dso_local i32 @CHECKARRVALID(i32*) #1

declare dso_local i32* @new_intArrayType(i32) #1

declare dso_local i32 @memcpy(i64, i64, i32) #1

declare dso_local i64 @ARRPTR(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
